# termi-cli

./: .gitignore  README.md  all_code.txt  create_db.py  pyproject.toml  requirements.txt  setup.cfg
src/: api.py  auth.py  cli.py  config.py  handlers.py  main.py  memory.py  prompts.py  utils.py
src/termi_cli/: __main__.py  api.py  auth.py  check_models.py  cli.py  config.py  create_db.py  handlers.py  i18n.py  memory.py  prompts.py  utils.py
src/termi_cli/examples/: workflow_tools_plugin.py
src/termi_cli/handlers/: __init__.py  agent_handler.py  chat_handler.py  config_handler.py  core_handler.py  history_handler.py  utility_handler.py
src/termi_cli/tools/: calendar_tool.py  code_tool.py  database.py  email_tool.py  file_system_tool.py  instruction_tool.py  shell_tool.py  web_search.py
src/tools/: calendar_tool.py  code_tool.py  database.py  email_tool.py  file_system_tool.py  instruction_tool.py  web_search.py
test/: test_agent_handler.py  test_api.py  test_config.py  test_core_handler.py  test_handlers.py  test_memory.py  test_shell_tool.py  test_utils.py
